03-devops-capstone/infra-pipelines/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ai-api-virtualservice
  namespace: default
spec:
  hosts:
    - ai-api.local
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            host: ai-api
            subset: v1
          weight: 50
        - destination:
            host: ai-api
            subset: v2
          weight: 50
